--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>HTML Academy: Глейси</title>
+	</head>
+	<body>
+		<header class="main-header">
+			<nav class="main-navigation">
+				<img class="main-logo" src="http://placehold.it/154x64" width="154" height="64" alt="Логотип магазина Глейси">
+				<ul class="site-navigation">
+					<li>
+						<a href="#">Каталог</a>
+						<ul class="site-navigation-sub">
+							<li><a href="#"><b>Новинки</b></a></li>
+							<li><a href="catalog.html">Сливочное</a></li>
+							<li><a href="#">Щербеты</a></li>
+							<li><a href="#">Фруктовый лед</a></li>
+							<li><a href="#">Мелорин</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Доставка и оплата</a></li>
+					<li><a href="#">О Компании</a></li>
+				</ul>
+				<div class="menu-search">
+					<span>Поиск</span>
+					<div class="sub-menu menu-search-sub">
+						<!--Здесь будет форма
+							Что ищем?-->
+					</div>
+				</div>
+				<div class="menu-login">
+					<a class="menu-item menu-item-login" href="#">Вход</a>
+					<div class="sub-menu menu-login-sub">
+						<!--Здесь будет форма:
+							Логин
+							Пароль
+							Войти-->
+						<a href="#">Забыли пароль</a>
+						<a href="#">Новая регистрация</a>
+					</div>
+				</div>
+				<div class="menu-cart">
+					<a class="menu-item menu-item-cart" href="#">Корзина</a>
+				</div>
+			</nav>
+			<p class="main-contacts">
+				С 10 до 20, ежедневно<br>
+				<b>8 812 450-25-25</b>
+			</p>
+		</header>
+		
+	</body>
 </html>
