Добавляет разметку блока слайдера на главной странице.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
 				<b>8 812 450-25-25</b>
 			</p>
 		</header>
-		
+		<main class="container">
+			<h1 class="visual-hidden">Магазин Глейси</h1>
+			<section class="slider">
+				<ul class="slider-list">
+					<li class="slider-list-item slider-list-item-raspberry">
+						<h3>Крем-брюле и пломбир с малиновым джемом</h3>
+						<img src="http://placehold.it/372x584" width="372" height="584" alt="Фото мороженного крем-брюле">
+						<img src="http://placehold.it/333x519" width="333" height="519" alt="Фото мороженного пломбир с малиновым джемом">
+						<a class="button button-slider" href="#">Давайте оба!</a>
+					</li>
+					<li class="slider-list-item slider-list-item-lemon">
+						<h3>Шоколадный пломбир и лимонный сорбет</h3>
+						<img src="http://placehold.it/375x582" width="375" height="582" alt="Фото мороженного шоколадный пломбир">
+						<img src="http://placehold.it/338x523" width="338" height="523" alt="Фото мороженного лимонный сорбет">
+						<a class="button button-slider" href="#">Давайте оба!</a>
+					</li>
+					<li class="slider-list-item slider-list-item-strawberry">
+						<h3>Пломбир с помадкой и клубничный щербет</h3>
+						<img src="http://placehold.it/367x582" width="367" height="582" alt="Фото мороженного пломбир с помадкой">
+						<img src="http://placehold.it/326x523" width="326" height="523" alt="Фото мороженного клубничный щербет">
+						<a class="button button-slider" href="#">Давайте оба!</a>
+					</li>
+				</ul>
+				<!--Здесь будет переключатель-->
+			</section>
+		</main>
 	</body>
 </html>
