Добавляет разметку блока банеров на главной странице.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
 				</ul>
 				<!--Здесь будет переключатель-->
 			</section>
+			<section class="banners">
+				<h2 class="visual-hidden">Акции</h2>
+				<ul class="banners-list">
+					<li class="banners-item banners-item-raspberry">
+						<h3>Малинка даром!</h3>
+						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+						<a class="button button-banners" href="#">Хочу варенье!</a>
+					</li>
+					<li class="banners-item banners-item-choco">
+						<h3>Шоколадки даром!</h3>
+						<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+						<a class="button button-banners" href="#">Хочу шоколадки!</a>
+					</li>
+				</ul>
+			</section>
 		</main>
 	</body>
 </html>
