--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
 				<ul class="slider-list">
 					<li class="slider-list-item slider-list-item-raspberry">
 						<h3>Крем-брюле и пломбир с малиновым джемом</h3>
-						<img src="http://placehold.it/372x584" width="372" height="584" alt="Фото мороженного крем-брюле">
-						<img src="http://placehold.it/333x519" width="333" height="519" alt="Фото мороженного пломбир с малиновым джемом">
+						<img src="http://placehold.it/372x584" width="372" height="584" alt="Фото мороженого крем-брюле">
+						<img src="http://placehold.it/333x519" width="333" height="519" alt="Фото мороженого пломбир с малиновым джемом">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 					<li class="slider-list-item slider-list-item-lemon">
 						<h3>Шоколадный пломбир и лимонный сорбет</h3>
-						<img src="http://placehold.it/375x582" width="375" height="582" alt="Фото мороженного шоколадный пломбир">
-						<img src="http://placehold.it/338x523" width="338" height="523" alt="Фото мороженного лимонный сорбет">
+						<img src="http://placehold.it/375x582" width="375" height="582" alt="Фото мороженого шоколадный пломбир">
+						<img src="http://placehold.it/338x523" width="338" height="523" alt="Фото мороженого лимонный сорбет">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 					<li class="slider-list-item slider-list-item-strawberry">
 						<h3>Пломбир с помадкой и клубничный щербет</h3>
-						<img src="http://placehold.it/367x582" width="367" height="582" alt="Фото мороженного пломбир с помадкой">
-						<img src="http://placehold.it/326x523" width="326" height="523" alt="Фото мороженного клубничный щербет">
+						<img src="http://placehold.it/367x582" width="367" height="582" alt="Фото мороженого пломбир с помадкой">
+						<img src="http://placehold.it/326x523" width="326" height="523" alt="Фото мороженого клубничный щербет">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 				</ul>
@@ -80,12 +80,45 @@
 					<li class="banners-item banners-item-raspberry">
 						<h3>Малинка даром!</h3>
 						<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-						<a class="button button-banners" href="#">Хочу варенье!</a>
+						<a class="button" href="#">Хочу варенье!</a>
 					</li>
 					<li class="banners-item banners-item-choco">
 						<h3>Шоколадки даром!</h3>
 						<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-						<a class="button button-banners" href="#">Хочу шоколадки!</a>
+						<a class="button" href="#">Хочу шоколадки!</a>
+					</li>
+				</ul>
+			</section>
+			<section class="hits">
+				<h2 class="visual-hidden">Хиты продаж</h2>
+				<ul class="hits-list">
+					<li class="hits-item hits-item-orange">
+						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+						<b>310₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item hits-item-coffee">
+						<h3>Сливочно-кофейное с кусочками шоколада</h3>
+						<b>380₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item hits-item-strawberry">
+						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+						<b>355₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item hits-item-brulle">
+						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
+						<b>415₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
+						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 				</ul>
 			</section>
