Добавляет разметку блока статей в блоге на главной странице.

--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
 						<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
 					</li>
 					<li class="features-item features-item-ecology">
-						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
-						</p>
+						<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
 					</li>
 					<li class="features-item features-item-contract">
 						<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
@@ -140,6 +139,10 @@
 					</li>
 				</ul>
 			</section>
+			<article class="blog-news">
+				<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
+				<p>Новое в нашем блоге</p>
+			</article>
 		</main>
 	</body>
 </html>
