Добавляет разметку блока рассылки на главной странице.

--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
 				<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
 				<p>Новое в нашем блоге</p>
 			</article>
+			<section class="subscribe">
+				<h2 class="visual-hidden">Подписка на рассылку</h2>
+				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+				<!--Здесь будет форма
+					Электронная почта
+					Отправить-->
+			</section>
 		</main>
 	</body>
 </html>
