--- a/index.html
+++ b/index.html
@@ -150,6 +150,24 @@
 					Электронная почта
 					Отправить-->
 			</section>
+			<section class="contacts">
+				<h2 visual-hidden>Как добраться</h2>
+				<img class="map" src="http://placehold.it/1200x428" width="1200" height="428">
+				<div class="feedback">
+					<p class="feedback-address">
+						Адрес главного офиса<br>
+						и офлайн-магазина:<br>
+						<b>ул. Большая Конюшенная</b><br>
+						<b>19/8, Санкт-Петербург</b>
+					</p>
+					<p class="feedback-phone">
+						Для заказов по телефону:<br>
+						<b>8 812 450-25-25</b><br>
+						(с 10 до 20 ежедневно)
+					</p>
+					<a class="button" href="#">Форма обратной связи</a>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
