Добавляет разметку блока подвала на главной странице.

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 					Отправить-->
 			</section>
 			<section class="contacts">
-				<h2 visual-hidden>Как добраться</h2>
-				<img class="map" src="http://placehold.it/1200x428" width="1200" height="428">
+				<h2 class="visual-hidden">Как добраться</h2>
+				<img class="map" src="http://placehold.it/1200x428" width="1200" height="428" alt="Карта">
 				<div class="feedback">
 					<p class="feedback-address">
 						Адрес главного офиса<br>
@@ -169,5 +169,25 @@
 				</div>
 			</section>
 		</main>
+		<footer class="main-footer">
+			<div class="footer-social">
+				<ul>
+					<li><a class="button-social button-social-tw" href="#">Твиттер</a></li>
+					<li><a class="button-social button-social-ig" href="#">Инстаграм</a></li>
+					<li><a class="button-social button-social-fb" href="#"></a>Фейсбук</li>
+					<li><a class="button-social button-social-vk" href="#"></a>Вконтакте</li>
+				</ul>
+			</div>
+			<ul class="footer-link-list">
+				<li><a class="footer-link-item" href="#"><b>Для поставщиков</b></a></li>
+				<li><a class="footer-link-item" href="#">О производстве</a></li>
+				<li><a class="footer-link-item" href="#">Наши документы</a></li>
+				<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
+			</ul>
+			<div class="footer-copyright">
+				<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+				<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+			</div>
+		</footer>
 	</body>
 </html>
