Добавляет разметку блока обратной связи на главной странице.

--- a/index.html
+++ b/index.html
@@ -189,5 +189,13 @@
 				<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
 			</div>
 		</footer>
+		<section class="modal modal-feedback">
+			<b>Мы обязательно вам ответим!</b>
+			<!--Как вас зовут?
+				Ваша почта для ответа?
+				Напишите что-нибудь...
+				Отправить-->
+			<span class="modal-close">X</span>
+		</section>
 	</body>
 </html>
