Убирает ненужные классы в блоке хитов на главной странице

--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
 			<section class="hits">
 				<h2 class="visual-hidden">Хиты продаж</h2>
 				<ul class="hits-list">
-					<li class="hits-item hits-item-orange">
+					<li class="hits-item">
 						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
 						<b>310₽</b>
 						<span>/кг</span>
 						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
-					<li class="hits-item hits-item-coffee">
+					<li class="hits-item">
 						<h3>Сливочно-кофейное с кусочками шоколада</h3>
 						<b>380₽</b>
 						<span>/кг</span>
 						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
-					<li class="hits-item hits-item-strawberry">
+					<li class="hits-item">
 						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
 						<b>355₽</b>
 						<span>/кг</span>
 						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
-					<li class="hits-item hits-item-brulle">
+					<li class="hits-item">
 						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
 						<b>415₽</b>
 						<span>/кг</span>
