Добавляет разметку блока списка товаров на странице каталога.

--- a/catalog.html
+++ b/catalog.html
@@ -56,6 +56,114 @@
 				<li><a href="#"></a>Каталог</li>
 				<li class="bredcrumbs-current">Сливочное</li>
 			</ul>
+			<section>
+				<h2>Фильтр товаров</h2>
+				<!--Сортировка:
+					Цена:
+					Жирность:
+					Наполнители:
+					Применить-->
+			</section>
+			<section class="catalog">
+				<h2 class="visual-hidden">Список сливочного мороженого</h2>
+				<ul class="catalog-list">
+					<li class="catalog-item">
+						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+						<b>310₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочно-кофейное с кусочками шоколада</h3>
+						<b>380₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+						<b>355₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
+						<b>415₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<!-------------------------------- конец 1 ряда -------------------------------->
+					<li class="hits-item">
+						<h3>Сливочное с брусничным джемом</h3>
+						<b>325₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с брусничным джемом">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочно-черничное с цельными ягодами черники</h3>
+						<b>410₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-черничного мороженого с цельными ягодами черники">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочно-лимонное с карамельной присыпкой</h3>
+						<b>375₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-лимонного мороженого с карамельной присыпкой">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочное с шоколадной стружкой</h3>
+						<b>320₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с шоколадной стружкой">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<!-------------------------------- конец 2 ряда -------------------------------->
+					<li class="hits-item">
+						<h3>Сливочно-ванильное с кусочками шоколада</h3>
+						<b>440₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-ванильного мороженого с кусочками шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочного с ментоловым сиропом</h3>
+						<b>435₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с ментоловым сиропом">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочное с кусочками черного шоколада</h3>
+						<b>355₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с кусочками черного шоколада">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<li class="hits-item">
+						<h3>Сливочное с мятным сиропом</h3>
+						<b>420₽</b>
+						<span>/кг</span>
+						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с мятным сиропом">
+						<a class="button" href="#">Быстрый просмотр</a>
+					</li>
+					<!-------------------------------- конец 3 ряда -------------------------------->
+				</ul>
+				<ul class="pagination-list">
+					<li class="pagination-item pagination-item-current"><a>1</a></li>
+					<li class="pagination-item"><a href="#">2</a></li>
+					<li class="pagination-item"><a href="#">3</a></li>
+					<li class="pagination-item"><a href="#">4</a></li>
+					<li class="pagination-item"><a href="#">5</a></li>
+					<li class="pagination-item"><a href="#">></a></li>
+				</ul>
+			</section>
 		</main>
 		<footer class="main-footer">
 			<div class="footer-social">
