--- a/catalog.html
+++ b/catalog.html
@@ -42,6 +42,28 @@
 				</div>
 				<div class="menu-cart">
 					<a class="menu-item menu-item-cart" href="#">Корзина</a>
+					<div class="sub-menu menu-cart-sub">
+						<table class="cart-table">
+							<tr class="cart-table-item">
+								<td class="cart-table-item-del">X</td>
+								<td class="cart-table-item-image"></td>
+								<td class="cart-table-item-text"><a href="#">Пломбир с апельсиновым джемом</a></td>
+								<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
+								<td class="cart-table-item-unit"><span>200</span> руб.</td>
+								<td class="cart-table-item-price">300 руб.</td>
+							</tr>
+							<tr class="cart-table-item">
+								<td class="cart-table-item-del">X</td>
+								<td class="cart-table-item-image"></td>
+								<td class="cart-table-item-text"><a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
+								<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
+								<td class="cart-table-item-unit"><span>300</span> руб.</td>
+								<td class="cart-table-item-price">450 руб.</td>
+							</tr>
+						</table>
+						<b class="cart-tatals">Итого: <span>750</span> Руб.</b>
+						<span class="button">Оформить заказ</span>
+					</div>
 				</div>
 			</nav>
 			<p class="main-contacts">
