Меняет тег кнопки "оформить заказ" на ссылку

--- a/catalog.html
+++ b/catalog.html
@@ -62,7 +62,7 @@
 							</tr>
 						</table>
 						<b class="cart-tatals">Итого: <span>750</span> Руб.</b>
-						<span class="button">Оформить заказ</span>
+						<a class="button">Оформить заказ</a>
 					</div>
 				</div>
 			</nav>
