Меняет тег кнопки закрытия модального окна на button

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				Ваша почта для ответа?
 				Напишите что-нибудь...
 				Отправить-->
-			<span class="modal-close">X</span>
+			<button class="modal-close" type="button" title="Закрыть">X</button>
 		</section>
 	</body>
 </html>
