Добавляет в разметку главной страницы контентные изображения.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation">
-				<img class="main-logo" src="http://placehold.it/154x64" width="154" height="64" alt="Логотип магазина Глейси">
+				<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 				<ul class="site-navigation">
 					<li>
 						<a href="#">Каталог</a>
@@ -55,20 +55,17 @@
 				<ul class="slider-list">
 					<li class="slider-list-item slider-list-item-raspberry">
 						<h3>Крем-брюле и пломбир с малиновым джемом</h3>
-						<img src="http://placehold.it/372x584" width="372" height="584" alt="Фото мороженого крем-брюле">
-						<img src="http://placehold.it/333x519" width="333" height="519" alt="Фото мороженого пломбир с малиновым джемом">
+						<img src="img/slider-raspberry.png" width="1045" height="881" alt="Фото мороженого крем-брюле и пломбира с малиновым джемом">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 					<li class="slider-list-item slider-list-item-lemon">
 						<h3>Шоколадный пломбир и лимонный сорбет</h3>
-						<img src="http://placehold.it/375x582" width="375" height="582" alt="Фото мороженого шоколадный пломбир">
-						<img src="http://placehold.it/338x523" width="338" height="523" alt="Фото мороженого лимонный сорбет">
+						<img src="img/slider-lemon.png" width="1065" height="859" alt="Фото мороженого шоколадный пломбир и лемонного сорбета">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 					<li class="slider-list-item slider-list-item-strawberry">
 						<h3>Пломбир с помадкой и клубничный щербет</h3>
-						<img src="http://placehold.it/367x582" width="367" height="582" alt="Фото мороженого пломбир с помадкой">
-						<img src="http://placehold.it/326x523" width="326" height="523" alt="Фото мороженого клубничный щербет">
+						<img src="img/slider-strawberry.png" width="1079" height="854" alt="Фото мороженого пломбир с помадкой и слубничного щербета">
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 				</ul>
@@ -96,28 +93,28 @@
 						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
 						<b>310₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+						<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-кофейное с кусочками шоколада</h3>
 						<b>380₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+						<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
 						<b>355₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+						<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
 						<b>415₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
+						<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 				</ul>
@@ -152,7 +149,7 @@
 			</section>
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
-				<img class="map" src="http://placehold.it/1200x428" width="1200" height="428" alt="Карта">
+				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Карта">
 				<div class="feedback">
 					<p class="feedback-address">
 						Адрес главного офиса<br>
