--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation">
-				<a href="index.html"><img class="main-logo" src="http://placehold.it/154x64" width="154" height="64" alt="Логотип магазина Глейси"></a>
+				<a href="index.html"><img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси"></a>
 				<ul class="site-navigation">
 					<li class="site-navigation-current">
 						<a href="#">Каталог</a>
@@ -93,28 +93,28 @@
 						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
 						<b>310₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+						<img src="img/icecream-orange.jpg" width="267" height="267" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-кофейное с кусочками шоколада</h3>
 						<b>380₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+						<img src="img/icecream-coffee.jpg" width="267" height="267" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
 						<b>355₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+						<img src="img/icecream-white.jpg" width="267" height="267" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочное крем-брюле с карамельной подливкой</h3>
 						<b>415₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
+						<img src="img/icecream-brulee.jpg" width="267" height="267" alt="Фото сливочного мороженого крем-брюле с карамельной подливкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<!-------------------------------- конец 1 ряда -------------------------------->
@@ -122,28 +122,28 @@
 						<h3>Сливочное с брусничным джемом</h3>
 						<b>325₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с брусничным джемом">
+						<img src="img/icecream-cowberry.jpg" width="267" height="267" alt="Фото сливочного мороженого с брусничным джемом">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-черничное с цельными ягодами черники</h3>
 						<b>410₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-черничного мороженого с цельными ягодами черники">
+						<img src="img/icecraem-blueberries.jpg" width="267" height="267" alt="Фото сливочно-черничного мороженого с цельными ягодами черники">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочно-лимонное с карамельной присыпкой</h3>
 						<b>375₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-лимонного мороженого с карамельной присыпкой">
+						<img src="img/icecream-lemon.jpg" width="267" height="267" alt="Фото сливочно-лимонного мороженого с карамельной присыпкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочное с шоколадной стружкой</h3>
 						<b>320₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с шоколадной стружкой">
+						<img src="img/icecream-choco.jpg" width="267" height="267" alt="Фото сливочного мороженого с шоколадной стружкой">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<!-------------------------------- конец 2 ряда -------------------------------->
@@ -151,28 +151,28 @@
 						<h3>Сливочно-ванильное с кусочками шоколада</h3>
 						<b>440₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочно-ванильного мороженого с кусочками шоколада">
+						<img src="img/icecream-vanilla.jpg" width="267" height="267" alt="Фото сливочно-ванильного мороженого с кусочками шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочного с ментоловым сиропом</h3>
 						<b>435₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с ментоловым сиропом">
+						<img src="img/icecream-menthol.jpg" width="267" height="267" alt="Фото сливочного мороженого с ментоловым сиропом">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочное с кусочками черного шоколада</h3>
 						<b>355₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с кусочками черного шоколада">
+						<img src="img/icecream-black.jpg" width="267" height="267" alt="Фото сливочного мороженого с кусочками черного шоколада">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<li class="hits-item">
 						<h3>Сливочное с мятным сиропом</h3>
 						<b>420₽</b>
 						<span>/кг</span>
-						<img src="http://placehold.it/267x267" width="267" height="267" alt="Фото сливочного мороженого с мятным сиропом">
+						<img src="img/icecream-mint.jpg" width="267" height="267" alt="Фото сливочного мороженого с мятным сиропом">
 						<a class="button" href="#">Быстрый просмотр</a>
 					</li>
 					<!-------------------------------- конец 3 ряда -------------------------------->
