Добавляет разметку слайдера на главную страницу

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 				</ul>
-				<!--Здесь будет переключатель-->
+				<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle" checked>
+				<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle">
+				<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle">
+				<label for="slider-toggle-raspberry">Первый слайд</label>
+				<label for="slider-toggle-lemon">Второй слайд</label>
+				<label for="slider-toggle-strawberry">Третий слайд</label>
 			</section>
 			<section class="banners">
 				<h2 class="visual-hidden">Акции</h2>
